--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,6 @@
             <version>5.1.5.RELEASE</version>
         </dependency>
 
-        <!-- DATASECTION -->
-        <dependency>
-            <groupId>studios.hawkeyedev</groupId>
-            <artifactId>datasection</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-
         <!-- GUAVA -->
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -52,6 +45,12 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-ext-jdk14</artifactId>
             <version>1.60</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.6.1</version>
         </dependency>
 
     </dependencies>
