--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>3.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+
     </dependencies>
 
 
