--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>1.5.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
     </dependencies>
 
 
